--- a/Readme.adoc
+++ b/Readme.adoc
@@ -57,8 +57,8 @@ To start JBoss Fuse, please follow these simple steps
  * Enter the following commands
 
   [demo-user@localhost ~]$ cd
-  [demo-user@localhost ~]$ cd fuse/
-  [demo-user@localhost fuse]$ ./bin/fuse
+  [demo-user@localhost ~]$ cd IoT_Summit_Lab
+  [demo-user@iotlab IoT_Summit_Lab]$ ./runJBossFuse.sh
 
 * Wait for the Red Hat JBoss Fuse to complete the start procedure
 
@@ -82,19 +82,3 @@ The instructions on building and running the first Flow are located https://gith
 
 == Lab 5 - Building and Running the Business Rules Service
 The instructions on building and running the Business Rules Service are located https://github.com/PatrickSteiner/IoT_Summit_Lab/tree/master/BusinessRulesService[here].
-
-== Starting the development tooling
-For our development activities, we will be using JBoss Developer Studio V8.1 (JBDS), an
-Eclipse based tooling.
-
-To start JBDS, double-click the provided icon on the dashboard.
-
-image::images/image2.png[]
-
-In the 'Project Explorer' Eclipse view, you will see our two project which we
-will be using in later stages of our lab.
-
- * 'businessRulesService' for our Rules Service
- * 'routingService' for our Routing Service
-
-image::images/image3.png[]
